--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -40,13 +40,19 @@
           <td><%= item.start_at %></td>
           <td><%= item.status %></td>
           <td>
-            <%= link_to 'Edit', edit_admins_item_path(item), class: 'btn btn-info' %>
-            <%= link_to 'Delete', admins_item_path(item), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-danger' %>
+            <div class="m-1">
+              <%= link_to "Start", admins_item_start_path(item), class: 'btn btn-outline-info btn-sm', method: :put if item.may_start? %>
+              <%= link_to "Pause", admins_item_pause_path(item), class: 'btn btn-outline-info btn-sm', data: { confirm: "Are you sure?" }, method: :put if item.may_pause? %>
+              <%= link_to "Cancel", admins_item_cancel_path(item), class: 'btn btn-outline-info btn-sm', data: { confirm: "Are you sure?" }, method: :put if item.may_cancel? %>
+              <%= link_to "End", admins_item_end_path(item), class: 'btn btn-outline-info btn-sm mt-1', data: { confirm: "Are you sure?" }, method: :put if item.may_end? %>
+            </div>
+            <%= link_to 'Edit', edit_admins_item_path(item), class: 'btn btn-primary btn-sm mt-1' %>
+            <%= link_to 'Delete', admins_item_path(item), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-danger btn-sm mt-1' %>
           </td>
         </tr>
       <% end %>
       </tbody>
     </table>
-    <%= link_to 'Create', new_admins_item_path, class: 'btn btn-info' %>
+    <%= link_to 'Add Item', new_admins_item_path, class: 'btn text-light', style: 'background-color: #000033' %>
   </div>
 </div>
