--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -30,6 +30,9 @@
               <li>
                 <%= link_to "Offer List", admins_offers_path, class: 'nav-link px-5 text-info' %>
               </li>
+              <li>
+                <%= link_to "Order List", admins_orders_path, class: 'nav-link px-5 text-info' %>
+              </li>
             </ul>
           </li>
           <li>
