--- a/app/views/users/home/index.html.erb
+++ b/app/views/users/home/index.html.erb
@@ -38,59 +38,26 @@
     </div>
   </div>
 </section>
-
 <!--feedback-->
-<section style="padding-top: 10px">
+<section style="padding-top: 10px; height: 100vh">
   <div class="container overflow-hidden">
     <%= render 'layouts/errors_message' %>
     <h4>Winners Feedback</h4>
-    <div class="row">
-      <div class="col-4">
-        <div class="p-3 border bg-light">
-          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
-          <h6 class="text-center">Silver Stone</h6>
+    <% @winners.each do |winner| %>
+      <div class="card mt-1">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-sm-3">
+              <%= image_tag winner.picture.url, style: 'height:100%; width: 100%' if winner.picture %>
+            </div>
+            <div class="col-sm-9 mt-4">
+              <h4><%= winner.user.username %></h4>
+              <h3><%= winner.comment %></h3>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="p-3 border bg-light">
-          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
-          <h6 class="text-center">Silver Stone</h6>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="p-3 border bg-light">
-          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
-          <h6 class="text-center">Silver Stone</h6>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--coming soon-->
-<section style="padding-bottom: 60px; padding-top: 10px">
-  <div class="container overflow-hidden ">
-    <h4>Coming Soon</h4>
-    <div class="row">
-      <div class="col-4">
-        <div class="p-3 border bg-light">
-          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
-          <h6 class="text-center">Silver Stone</h6>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="p-3 border bg-light">
-          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
-          <h6 class="text-center">Silver Stone</h6>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="p-3 border bg-light">
-          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
-          <h6 class="text-center">Silver Stone</h6>
-        </div>
-      </div>
-    </div>
+    <% end %>
   </div>
 </section>
 <%= render "layouts/nav" %>
