--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -1,13 +1,12 @@
-<!--Show Page-->
 <div class="container" style="margin-top: 100px; height: 110vh">
   <%= render 'layouts/errors_message' %>
   <div class="card border-0">
     <div class="card-body">
       <div class="row">
-        <div class="col-3 col-lg-1">
+        <div class="col-3">
           <%= image_tag current_user.image.url, class: 'rounded-circle', style: 'height: 80px' if current_user.image.url %>
         </div>
-        <div class="col-9 col-lg-11">
+        <div class="col-9">
           <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm d-block"><span class="text-secondary">Username:</span> <%= current_user.username %>
           </label>
           <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm d-block"><span class="text-secondary">Email:</span> <%= current_user.email %>
@@ -33,8 +32,8 @@
   <div class="text-start p-2 mt-2 mb-2">
     <%= link_to "Order History", users_profile_path(history: 'order'), class: 'd-inline btn btn-sm text-light', style: 'background-color: #000033' %>
     <%= link_to "Lottery History", users_profile_path(history: 'bet'), class: 'd-inline btn btn-sm text-light', style: 'background-color: #000033' %>
-    <%= link_to "Invite History", users_profile_path(history: 'invite'), class: 'd-inline btn btn-sm text-light', style: 'background-color: #000033' %>
     <%= link_to "Winning History", users_profile_path(history: 'winner'), class: 'd-inline btn btn-sm text-light', style: 'background-color: #000033' %>
+    <%= link_to "Invite History", users_profile_path(history: 'invite'), class: 'd-inline btn btn-sm text-light', style: 'background-color: #000033' %>
   </div>
   <% @orders&.each do |order| %>
     <div class="card bg-light border-dark mb-1" style="font-family: 'Apple SD Gothic Neo'">
@@ -59,6 +58,7 @@
           <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm"><span class="text-secondary">State</span> <%= order.state %>
           </label>
         </div>
+        <%= link_to "Cancel", users_orders_path(order), data: { confirm: "Are you sure?" }, class: 'btn btn-danger text-light', style: "--bs-btn-padding-y: .20rem; --bs-btn-padding-x: .3rem; --bs-btn-font-size: .70rem;", method: :put if order.may_cancel? && order.submitted? %>
         <% if @orders.blank? %>
           <div class="card-body">
             <h2>No Record Found</h2>
@@ -105,7 +105,6 @@
       </div>
     </div>
   <% end %>
-
   <% @winners&.each do |winner| %>
     <div class="card bg-light border-dark mb-2" style="font-family: 'Apple SD Gothic Neo'">
       <div class="card-body">
